# haskell-simple

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  Main.hs  floskell.json  git-clone-haskell-simple.bat  haskell-simple.cabal  hie.yaml
