cabal-version:       3.0
name:                haskell-simple
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              joseaanton
-- maintainer:          38797959+joseaanton@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-options
  -- | See https://limperg.de/ghc-extensions/
  default-extensions:
    BangPatterns
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TupleSections
    TypeApplications
    -- Otros
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    StandaloneDeriving

  other-extensions:
    -- NoImplicitPrelude -- No esnecesaria con mixins
 
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
  
  default-language:    Haskell2010

common common-depends
  build-depends:         base >=4.7 && <5
                       , relude ^>= 1.0.0.0
                       -- , text -- in relude
                       -- , bytestring -- in relude
                       -- , unordered-containers -- in relude
  

  mixins:                base hiding (Prelude)
                       , relude (Relude as Prelude)
                       , relude


executable main
  import:              common-options, common-depends
  main-is:             Main.hs
  other-modules:       
  hs-source-dirs:      .
  other-extensions:
  ghc-options:         
  build-depends:       
